add night theme

--- a/users/templates/alcohol.html
+++ b/users/templates/alcohol.html
@@ -1,4 +1,4 @@
-<div id='UserAlco' class="alco-user-container">
+<div id='UserAlco' class="alco-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-alco-container d-flex justify-content-center align-items-center">
         <span class="header-text-alco">Алкоголь</span>
     </div>
