--- a/users/templates/children.html
+++ b/users/templates/children.html
@@ -1,4 +1,4 @@
-<div id="UserChildren" class="user-change-children-container">
+<div id="UserChildren" class="user-change-children-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
         <div class="user-header-children d-flex justify-content-between align-items-center">
             <span class="header-text-children">Дети</span>
         </div>
