--- a/users/templates/education.html
+++ b/users/templates/education.html
@@ -1,4 +1,4 @@
-<div id='UserEducation' class="education-user-container">
+<div id='UserEducation' class="education-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-education-container d-flex justify-content-center align-items-center">
         <span class="header-text-education">Образование</span>
     </div>
