--- a/users/templates/family.html
+++ b/users/templates/family.html
@@ -1,4 +1,4 @@
-<div id='UserFamily' class="family-user-container">
+<div id='UserFamily' class="family-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
         <div class="header-family-container">
             <span class="header-text-otnoshenie">Отношения</span>
         </div>
