--- a/users/templates/genders.html
+++ b/users/templates/genders.html
@@ -1,4 +1,4 @@
-<div id='GenderModal' class='user-change-gender-container'>
+<div id='GenderModal' class='user-change-gender-container' style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container">
         <div class="header-genders-page d-flex justify-content-center align-items-center">
             <span>Ориентация</span>
