--- a/users/templates/interested.html
+++ b/users/templates/interested.html
@@ -1,4 +1,4 @@
-<div id='UserInterested' class="interested-user-account-container">
+<div id='UserInterested' class="interested-user-account-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
         <div class="user-interested-header">
             <span class="header-text-interests">Интересы</span>
             <i class="bi bi-x close-interested" onclick='CloseUserInterested()'></i>
