--- a/users/templates/interface.html
+++ b/users/templates/interface.html
@@ -1,4 +1,4 @@
-<div id="UserInterface" class="container Interface-user-account-container">
+<div id="UserInterface" class="container Interface-user-account-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container text-center">
         <span class="Interface-user-account-header d-flex justify-content-center align-items-center">
             <i class="bi bi-backspace close-interface" onclick='CloseUserInterface()'></i>
