--- a/users/templates/language.html
+++ b/users/templates/language.html
@@ -1,4 +1,4 @@
-<div id='UserLanguage' class="user-language-container">
+<div id='UserLanguage' class="user-language-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
                 <div class="modal-header-page">
                     <h5 class="modal-title user-header-lang" id="languageModalLabel">Языки</h5>
                 </div>
