--- a/users/templates/payment.html
+++ b/users/templates/payment.html
@@ -1,4 +1,4 @@
-<div id="PayPremium" class="pay-premium-container">
+<div id="PayPremium" class="pay-premium-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container">
         <div class="header-text-page-pay d-flex justify-content-center align-items-center">
             <span>Детали оплаты</span>
