--- a/users/templates/personality.html
+++ b/users/templates/personality.html
@@ -1,4 +1,4 @@
-<div id='UserPersonality' class="personality-user-container">
+<div id='UserPersonality' class="personality-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-personality-container d-flex justify-content-center align-items-center">
         <span class="header-text-personality">Тип личности</span>
     </div>
