--- a/users/templates/premium-popup.html
+++ b/users/templates/premium-popup.html
@@ -1,5 +1,5 @@
 <!-- premium-popup.html -->
-<div id="myModal" class="detail-premium-container">
+<div id="myModal" class="detail-premium-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container">
         <span class="header-text-page d-flex justify-content-center text-center">
             Приемущества Alamio Premium
