--- a/users/templates/settings.html
+++ b/users/templates/settings.html
@@ -1,4 +1,4 @@
-<div id="SettingsUser" class="modal container settings-user-header-container">
+<div id="SettingsUser" class="modal container settings-user-header-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
         <div class="modal-container">
             <div class="settings-user-header d-flex justify-content-center align-items-center">
                 <span>Настройки</span>
