--- a/users/templates/user_account.html
+++ b/users/templates/user_account.html
@@ -1,4 +1,4 @@
-<div id="SettingsUserAccount" class="settings-user-account-container">
+<div id="SettingsUserAccount" class="settings-user-account-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container">
         <div class="settings-user-account-header text-center mb-4">
             Аккаунт
