--- a/users/templates/user_gender.html
+++ b/users/templates/user_gender.html
@@ -1,4 +1,4 @@
-<div id="UserGenderChoice" class="gender-user-container">
+<div id="UserGenderChoice" class="gender-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-gender-container d-flex justify-content-center align-items-center position-relative">
     <span class="header-text">Ориентация</span>
     <i class="bi bi-x close-user-genders position-absolute" onclick='CloseUserSelecdGenders()'></i>
