--- a/users/templates/work.html
+++ b/users/templates/work.html
@@ -1,4 +1,4 @@
-<div id='UserWork' class="modal work-user-account-container">
+<div id='UserWork' class="modal work-user-account-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-work-user-container">
         <span class="header-text-work">Робота</span>
         <i class="bi bi-x cross-icon" onclick="CloseUserWork()"></i>
