--- a/users/templates/zodiac.html
+++ b/users/templates/zodiac.html
@@ -1,4 +1,4 @@
-<div id='ZodiacSigns' class="zodiac-container">
+<div id='ZodiacSigns' class="zodiac-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-header-zodiac">
         <h5 class="modal-title zodiac-header" id="zodiacModalLabel">Знаки Зодиака</h5>
     </div>
