--- a/users/templates/info_user.html
+++ b/users/templates/info_user.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-<div id="ChangeUser" class='change-user-information-container'>
+<div id="ChangeUser" class='change-user-information-container' style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="modal-container">
         <div class="header-text d-flex justify-content-between align-items-center">
             Основное
