--- a/users/templates/smoking.html
+++ b/users/templates/smoking.html
@@ -1,4 +1,4 @@
-<div id='UserSmoking' class="smoking-user-container">
+<div id='UserSmoking' class="smoking-user-container" style='{% if user.theme %}background:#282e33; color: #fff;{% endif %}'>
     <div class="header-smoking-container d-flex justify-content-center align-items-center">
         <span class="header-text-smoking">Курение</span>
     </div>
