--- a/users/templates/info_user.html
+++ b/users/templates/info_user.html
@@ -19,7 +19,7 @@
         <div class="input-group">
             <label for="age">Дата рождения</label>
             <div class="input-container">
-                <input type="date" id="age" class="form-control" value="{{ user.birthday|date:'Y-m-d' }}" min="1900-01-01" max="2024-01-01" required>
+                <input type="date" id="age" class="form-control" value="{{ user.bidth|date:'Y-m-d' }}" min="1900-01-01" max="2024-01-01" required>
             </div>
         </div>
     </div>
