--- a/users/templates/language.html
+++ b/users/templates/language.html
@@ -22,7 +22,7 @@
                         <li class="language-item"><div class="circle-language {% if user.languages == 'D' %}active{% endif %}" data-language="Dutch"></div><label>Dutch</label></li>
                         <li class="language-item"><div class="circle-language {% if user.languages == 'W' %}active{% endif %}" data-language="Swedish"></div><label>Swedish</label></li>
                         <li class="language-item"><div class="circle-language {% if user.languages == 'Gr' %}active{% endif %}" data-language="Greek"></div><label>Greek</label></li>
-                        <li class="language-item"><div class="circle-language {% if user.languages == 'T' %}active{% endif %}" data-language="Turkish"></div><label>Turkish</label></li>і
+                        <li class="language-item"><div class="circle-language {% if user.languages == 'T' %}active{% endif %}" data-language="Turkish"></div><label>Turkish</label></li>
                     </ul>
                 </div>
                 <div class="modal-footer-page">
