--- a/users/templates/interface.html
+++ b/users/templates/interface.html
@@ -8,7 +8,7 @@
     <div class="Interface-settings-container">
         <div class="form-check form-switch d-flex justify-content-between align-items-center">
             <label class="form-check-label" for="darkThemeSwitch">Темная тема</label>
-            <input class="form-check-input" type="checkbox" id="darkThemeSwitch" data-theme="dark">
+            <input class="form-check-input" type="checkbox" id="darkThemeSwitch" data-theme="dark" {% if user.theme %}checked{% endif %}>
         </div>
     </div>
 </div>
